# bandit

./: LICENSE  README.md  pyproject.toml
bandit/: tutorial.ipynb
bandit/algos/: __init__.py  base.py  epsilon.py  etc.py  greedy.py  naive.py  random.py  ts.py  ucb.py
bandit/envs/: __init__.py  slot_machine.py
notebooks/: tutorial.ipynb
